--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-15 Scott Bambrough  <scottb@netwinder.org>
+
+	* sysdeps/unix/sysv/linux/arm/sigaction.c: Fix typo in preventing
+	compilation of file.
+
 1999-04-15  Ulrich Drepper  <drepper@cygnus.com>
 
 	* Versions.def: Add GLIBC_2.1.1 to libpthread.
