--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-16  Thorsten Kukuk  <kukuk@suse.de>
+
+	* sunrpc/rpc_cout.c (print_header): Use int32_t pointer, not long.
+
 1999-04-16  Ulrich Drepper  <drepper@cygnus.com>
 
 	* nscd/cache.c (prune_cache): Only disable file checking for
