--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-04-15  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
+
+	* sysdeps/unix/sysv/linux/fstatvfs.c: Set f_frsize to zero.  Don't
+	include "linux_fsinfo.h".
+	Based on a patch by H.J. Lu <hjl@gnu.org>.
+
 1999-04-16  Thorsten Kukuk  <kukuk@suse.de>
 
 	* sunrpc/rpc_cout.c (print_header): Use int32_t pointer, not long.
