--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-16  Ulrich Drepper  <drepper@cygnus.com>
+
+	* locales/th_TH: New file.  Thai locale description.
+	Contributed by Theppitak Karoonboonyanan <thep@links.nectec.or.th>.
+
 1999-04-14  Cristian Gafton  <gafton@redhat.com>
 
 	* SUPPORTED: Add support for Ukraine Russian.
