--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-17  Thorsten Kukuk  <kukuk@suse.de>
+
+	* timezone/zic.c (dolink): Append complete path ot only filename
+	to ../ list.
+
 1999-04-17  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* iconvdata/ibm874.c (TABLES, CHARSET_NAME): Follow name change.
