--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-18  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/unix/bsd/poll.c (__poll): Add more compatiblity code to
+	detect and handle invalid descriptors.
+
 1999-04-17  Thorsten Kukuk  <kukuk@suse.de>
 
 	* timezone/zic.c (dolink): Append complete path ot only filename
