--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-18  Ulrich Drepper  <drepper@cygnus.com>
+
+	* socket/sys/socket.h: Define SHUT_RD, SHUT_WR, and SHUT_RDWR.
+	Fixes PR libc/1083.
+
 1999-04-18  Thorsten Kukuk  <kukuk@suse.de>
 
 	* sunrpc/Makefile: Remove special handling of bootparam.x,
