--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-04-24  Ulrich Drepper  <drepper@cygnus.com>
+
+	* iconv/gconv_builtin.h: Add definitions for UTF16 builtins.
+	* iconv/gconv_int.h: Declare UTF16 functions.
+	* iconv/gconv_simple.c: Add UTF16 conversion functions.
+
 1999-04-20  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* posix/wordexp.c (parse_param): Fix type of offset to allow it to
@@ -37,7 +43,7 @@
 
 1999-04-17  Thorsten Kukuk  <kukuk@suse.de>
 
-	* timezone/zic.c (dolink): Append complete path ot only filename
+	* timezone/zic.c (dolink): Append complete path not only filename
 	to ../ list.
 
 1999-04-17  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
