--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-27  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* hurd/hurdexec.c (_hurd_exec): If SIGKILL present in _hurdsig_traced
+	set, pass EXEC_SIGTRAP flag in exec RPC.
+
 1999-04-26  Ulrich Drepper  <drepper@cygnus.com>
 
 	* posix/fnmatch.c (internal_fnmatch): Renamed from fnmatch.  Take
