--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 1999-04-27  Ulrich Drepper  <drepper@cygnus.com>
 
+	* include/dirent.h: Remove __getdirentries declaration, add __getdents
+	and __getdents64.
+	* sysdeps/unix/readdir.c: Use __getdents, not __getdirentries.
+	* sysdeps/unix/readdir_r.c: Likewise.
+	* sysdeps/unix/sysv/linux/readdir64.c: Likewise.
+	* sysdeps/unix/sysv/linux/readdir64_r.c: Likewise.
+	* sysdeps/unix/sysv/linux/getdents.c: Define __getdents, not
+	__getdirentries.  Remove fourth argument.
+	* sysdeps/unix/sysv/linux/getdirentries.c: New file.
+	* sysdeps/unix/sysv/linux/getdirentries64.c: New file.
+	* sysdeps/unix/sysv/linux/Makefile [subdir=dirent] (sysdep_routines):
+	Add getdirentries and getdirentries64.
+	* sysdeps/unix/sysv/linux/Dist: Add getdirentries and getdirentries64.
+
 	* posix/fnmatch.c (internal_fnmatch): Correctly reset string
 	pointer in case of an invalid [[: expression.
 
