--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 1999-04-28  Ulrich Drepper  <drepper@cygnus.com>
 
+	* libio/iofopncook.c (_IO_cookie_seek): Correct return value.
+	Patch by Peter Miller <millerp@canb.auug.org.au>.
+
+1999-04-27  Thorsten Kukuk  <kukuk@suse.de>
+
+	* sunrpc/pmap_clnt.c: Add own get_myaddress function, which
+	  prefers loopback device.
+
+1999-04-28  Ulrich Drepper  <drepper@cygnus.com>
+
 	* posix/fnmatch.c (internal_fnmatch): Finish incomplete
 	no_leading_period change.
 
