--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 1999-04-28  Ulrich Drepper  <drepper@cygnus.com>
 
+	* malloc/malloc.c (rEALLOc): Only free memory for size 0 if oldmem
+	is != NULL.
+
+1999-04-28  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* malloc/malloc.c (REALLOC_ZERO_BYTES_FREES): Define it to follow
+	ISO C9x and Unix98.
+
+1999-04-28  Ulrich Drepper  <drepper@cygnus.com>
+
 	* libio/iofopncook.c (_IO_cookie_seek): Correct return value.
 	Patch by Peter Miller <millerp@canb.auug.org.au>.
 
