--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1999-04-23  Paul Eggert  <eggert@1twinsun.com>
+1999-04-23  Paul Eggert  <eggert@twinsun.com>
 
 	* stdlib/strtoull.c: Surround strong_alias and weak_alias with
 	ifdef _LIBC.
@@ -31,7 +31,7 @@
 1999-04-27  Thorsten Kukuk  <kukuk@suse.de>
 
 	* sunrpc/pmap_clnt.c: Add own get_myaddress function, which
-	  prefers loopback device.
+	prefers loopback device.
 
 1999-04-28  Ulrich Drepper  <drepper@cygnus.com>
 
