--- a/linuxthreads/ChangeLog
+++ b/linuxthreads/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-28  Ulrich Drepper  <drepper@cygnus.com>
+
+	* manager.c (pthread_allocate_stack): Optimize initialization of new
+	thread descriptor.
+
 1999-04-16  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* sysdeps/arm/Implies: Removed since cmpxchg/no-cmpxchg
