--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,10 @@ Version 2.1.1
 
 * Update timezone data files.
 
+* lots of charmaps corrections
+
+* some new locale definitions and charmaps
+
 
 Version 2.1
 
