--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-29  Ulrich Drepper  <drepper@cygnus.com>
 
+	* Makefile (install-locales): Allow specifying charset in locale
+	name but omit it in locale definition file.
+
 	* SUPPORTED: Don't generate ru_SU.
 	* locales/ru_SU: Removed.
 
