--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-04-30  Roland McGrath  <roland@baalperazim.frob.com>
 
+	* sysdeps/i386/bzero.c: Add #undef __bzero.
+
 	* hurd/hurdinit.c (_hurd_new_proc_init): Don't do initial SIGTRAP if
 	EXEC_SIGTRAP was set in the incoming exec flags--that indicates the
 	exec server simulated a SIGTRAP before we even started up, so gdb is
