--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-02  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/unix/sysv/linux/sys/procfs.h: Remove greg_t, gregset_t,
+	and fpregset_t definition.  They are defined in ucontext.h.
+
 1999-04-14  Scott Bambrough  <scottb@netwinder.org>
 
 	* sysdeps/unix/sysv/linux/arm/net/ethernet.h: struct ether_addr
