--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-03  Ulrich Drepper  <drepper@cygnus.com>
+
+	* Makefile (distribute): Temporarily add th_TH.in and cs_CZ.in.
+
 1999-04-29  Ulrich Drepper  <drepper@cygnus.com>
 
 	* Makefile (install-locales): Allow specifying charset in locale
